# protein_translation

./: Cargo.toml  LICENSE  README.md
src/: codon.rs  lib.rs  str.rs  string.rs
tests/: unit.rs
